# feer

./: .gitignore  CMakeLists.txt  README.md  todo.list
include/feer/: result.hpp
modules/fear/: result.cppm
scripts/: build.sh  build_w_test.sh
tests/compile_fail/: match_mismatched_return_type_fail.cpp  match_missing_err_parameter_fail.cpp  match_void_ok_takes_arg_fail.cpp  result_const_err_type_fail.cpp  result_const_rvalue_reference_fail.cpp  result_err_reference_type_fail.cpp  result_err_type_fail.cpp  result_lvalue_ref_from_temporary_fail.cpp  result_rvalue_reference_fail.cpp
tests/src/: result_tests.cpp
